--- a/ProjectName/Views/Shared/_Layout.cshtml
+++ b/ProjectName/Views/Shared/_Layout.cshtml
@@ -4,8 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-@* Change Project Name!------------------------------------------------------ *@
-  <title>Project Name</title>
+  <title>$ProjectName</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="~/css/styles.css">
@@ -14,8 +13,7 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-@* Change Project Name!------------------------------------------------------ *@
-      <h1 id="jumbotron">Project Name</h1>
+      <h1 id="jumbotron">$ProjectName</h1>
     </div>
   @RenderBody()
 @* vvvvv Insert Divs creating FileName.cshtml in Shared folder with <div></div> vvvvv *@
